deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks-api
  template:
    metadata:
      labels:
        app: tasks-api
    spec:
      containers:
      - name: tasks-api
        image: emrecil/iav-tasks-api:1.1
        ports:
        - containerPort: 5000
      volumes:
        - name: tasks-db-volume
          persistentVolumeClaim:
            claimName: tasks-db-pvc
