service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-api-service
spec:
  selector:
    app: tasks-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
